# LicensingServer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
.cursor/rules/: docs.mdc
app/: __init__.py  config.py  dependencies.py  main.py
app/core/: auth_config.py  constants.py  exceptions.py
app/database/: connection.py  postgres.py
app/models/: database.py  schemas.py
app/scripts/: db_management.py
app/services/: activation_form_service.py  activation_service.py  application_service.py  auth_service.py  customer_service.py  license_service.py  validation_service.py
app/utils/: date_helpers.py  license_generator.py  rsa_verification.py  test_data_generator.py  test_users.py  validation_helpers.py
client_sdk/: README.md  license_client.py
client_sdk/examples/: advanced_usage.py  authentication_example.py  basic_usage.py  (+7 more)
docker/: docker-compose.app.yml  docker-compose.postgres-dev.yml  docker-compose.postgres.yml  docker-compose.yml
docs/: ACTIVATION_FORMS_TESTING.md
frontend/: MIGRATION.md  README.md  api.ts  next.config.js  package.json  tailwind.config.js
generated_client/: README.md  pyproject.toml  setup.py
migrations/: env.py
scripts/: clear_alembic_version.py  clear_all_licenses.py  clear_database.py  create_sample_data.py  generate_random_data.py  setup_auth_database.py  setup_postgresql.py  setup_test_applications.py  show_license_keys.py  test_activation_forms.py  test_customer_constraints.py  test_liscense_activation.py  test_token_scopes.py
(+171 files in other folders)
